# docs/swagger.json
@@ -9,8 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/organizations/info": {
+        "/organizations/{orgID}/info": {
             "get": {
+                "description": "Get information about the organization.",
                 "produces": [
                     "application/json"
                 ],
@@ -18,16 +19,34 @@
                     "Organization Information"
                 ],
                 "summary": "Get organization information",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Organization ID",
+                        "name": "orgID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful response",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
                     },
+                    "404": {
+                        "description": "Organization not found\"} \"Organization not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to fetch organization information\"} \"Failed to fetch organization information",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -38,8 +57,9 @@
                 }
             }
         },
-        "/organizations/marketing": {
+        "/organizations/{orgID}/marketing": {
             "get": {
+                "description": "Get information about the marketing tools used by the organization.",
                 "produces": [
                     "application/json"
                 ],
@@ -47,16 +67,34 @@
                     "Marketing Tools"
                 ],
                 "summary": "Get marketing tools information",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Organization ID",
+                        "name": "orgID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful response",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
                     },
+                    "404": {
+                        "description": "Organization not found\"} \"Organization not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to fetch marketing tools\"} \"Failed to fetch marketing tools",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
@@ -67,8 +105,9 @@
                 }
             }
         },
-        "/organizations/payouts": {
+        "/organizations/{orgID}/payouts": {
             "get": {
+                "description": "Get information about the payouts used by the organization.",
                 "produces": [
                     "application/json"
                 ],
@@ -76,16 +115,34 @@
                     "Payouts Information"
                 ],
                 "summary": "Get payouts information",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Organization ID",
+                        "name": "orgID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Successful response",
                         "schema": {
                             "type": "object",
                             "additionalProperties": true
                         }
                     },
+                    "404": {
+                        "description": "Organization not found\"} \"Organization not found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Failed to fetch payouts information\"} \"Failed to fetch payouts information",
                         "schema": {
                             "type": "object",
                             "additionalProperties": {
